# ssm-moe

./: .gitignore  Cargo.toml  README.md  router_server.py
scripts/: export_linear_head.py
src/: config.rs  lib.rs  main.rs  pipeline.rs  server.rs
src/brain/: decompose.rs  gate.rs  native_router.rs  router.rs
src/experts/: expert_router.rs  model.rs  registry.rs
src/layers/: confidence.rs  critic.rs  fusion.rs  linear_head.rs
src/memory/: context.rs
tests/: gate.rs
