[package]
name = "ssm-moe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssm-moe"
path = "src/main.rs"

[dependencies]
# llama.cpp bindings — real GGUF quantization, native Mamba-1/Mamba-2 (SSM)
# support, no hand-rolled tensor remapping. Builds llama.cpp via cmake at
# compile time (needs a C/C++ toolchain + cmake on the build machine).
llama-cpp-2 = "0.1"

# HuggingFace model hub — used to pull GGUF checkpoint files, same pattern as
# before, just requesting a `.gguf` asset instead of safetensors+config.json.
hf-hub = { version = "0.3", features = ["tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LRU cache for warm adapter tier
lru = "0.12"

clap = { version = "4", features = ["derive"] }

# HTTP client for the temporary bart-large-mnli router sidecar (see
# src/brain/router.rs) — remove once the router is a native model.
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
default = []   # cpu-only by default; add --features cuda on Linux/Colab
cuda = ["llama-cpp-2/cuda"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
