[package]
name = "ssm-moe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssm-moe"
path = "src/main.rs"

[dependencies]
# Candle is now only used by the Critic (layers/critic.rs) — a small 130M
# Mamba-1 model deliberately forced to run on CPU regardless of what device
# is requested. Experts moved to llama-server subprocesses (see
# experts/llama_server.rs) for real GGUF quantization, so candle no longer
# needs a CUDA feature at all: this crate builds and links natively on
# Windows now without any nvcc/MSVC C-toolchain dependency.
candle-core = { git = "https://github.com/huggingface/candle", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle", default-features = false }

# HuggingFace model hub + tokenizers (used by the Critic's checkpoint load)
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.19", features = ["http"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive"] }

# HTTP client — used by the Brain Router sidecar (router.rs, temporary until
# a native SSM router is trained) and by the expert router server client
# (experts/expert_router.rs).
reqwest = { version = "0.12", features = ["blocking", "json"] }

# HTTP server — OpenAI-compatible endpoint (server.rs) so the pipeline can be
# plugged into Vivianne (or any other harness) as a custom-base-URL provider.
axum = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
